--- a/admin-app/src/assets/pages/confirmation-email.html
+++ b/admin-app/src/assets/pages/confirmation-email.html
@@ -18,15 +18,15 @@
         }
     </style>
 </head>
-<body style="margin:0; padding: 0; background: linear-gradient(218.49deg, #C04848 5.98%, #480048 98.42%); width: 100%; height: 100vh;">
+<body style="margin:0; padding: 0; background: linear-gradient(218.49deg, #C04848 5.98%, #480048 98.42%); width: 100%; padding-top: 100px; padding-bottom:100px;">
     
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="padding-top: 50px;">
         <tr>
             <td align="center">
-                <div style=" border-radius: 16px; background-color: white; width: 60%; padding: 15px;">
-                    <h2 style="font-weight: bold; font-family: 'Montserrat', sans-serif;">Welcome {username}!</h2> 
-                    <p style="font-family: 'Montserrat', sans-serif;">Your verification code is {####}.</p> 
-                    <p style="font-family: 'Montserrat', sans-serif;">Go to 
+                <div style=" border-radius: 16px; background-color: white; width: 60%; padding: 50px;">
+                    <h2 style="font-weight: bold; font-family: 'Montserrat', sans-serif; font-size: 28px;">Welcome {username} !</h2> 
+                    <p style="font-family: 'Montserrat', sans-serif;  font-size: 25px;">Your verification code is {####}.</p> 
+                    <p style="font-family: 'Montserrat', sans-serif;"  font-size: 15px;>Go to 
                         <a target="_blank" class="link" href=" http://localhost:4200/verificate-account"> http://localhost:4200/verificate-account</a> 
                         and enter the code to activate your acount. </p>
                 </div>
