--- a/ionic-app/src/index.html
+++ b/ionic-app/src/index.html
@@ -6,7 +6,11 @@
   <title>RandomAQ</title>
 
   <base href="/" />
-
+  <script>
+    if (global === undefined) {
+      var global = window;
+    }
+  </script>
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
